[gd_scene load_steps=3 format=3 uid="uid://f3txviy6p4s"]

[ext_resource type="Script" uid="uid://bc7cu7un4qjp7" path="res://ui/pause_menu/pause_screen.gd" id="1_amjc5"]
[ext_resource type="PackedScene" uid="uid://bb1hfx6qp2nul" path="res://ui/pause_menu/pause_menu.tscn" id="1_yciml"]

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amjc5")

[node name="Dimmer" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="PauseMenuOffset" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseMenu" parent="PauseMenuOffset" instance=ExtResource("1_yciml")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 487.0
offset_top = 207.0
offset_right = 625.0
offset_bottom = 401.0
